--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"name": "Collection",
 	"private": true,
 	"scripts": {
 		"test": "grunt test"
@@ -9,8 +10,8 @@
 	},
 	"license": "GPLv2",
 	"devDependencies": {
-		"eslint-config-wikimedia": "0.20.0",
-		"grunt": "1.4.0",
+		"eslint-config-wikimedia": "0.21.0",
+		"grunt": "1.4.1",
 		"grunt-banana-checker": "0.9.0",
 		"grunt-eslint": "23.0.0",
 		"grunt-stylelint": "0.16.0",
